; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/ddraw/Surface/extr_createsurface.c_CopyDDSurfDescToDDSurfDesc2.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/ddraw/Surface/extr_createsurface.c_CopyDDSurfDescToDDSurfDesc2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CopyDDSurfDescToDDSurfDesc2(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %6 = call i32 @RtlZeroMemory(%struct.TYPE_5__* %5, i32 4)
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @RtlCopyMemory(%struct.TYPE_5__* %7, i32 %8, i32 4)
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  store i32 4, i32* %11, align 4
  ret void
}

declare dso_local i32 @RtlZeroMemory(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @RtlCopyMemory(%struct.TYPE_5__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
